--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,40 @@
-spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/vehicle_service_system
-    username: root
-    password: 1234D
+spring :
+  datasource :
+    url : jdbc:mysql://localhost:3306/vehicle_service_system
+    username : root
+    password : 1234D
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  jpa :
+    hibernate :
+      ddl-auto : update
+
+
+
+
+
+
+#spring:
+#  mail:
+#    host: smtp.gmail.com
+#    port: 587
+#    username: nethmidaniel@gmail.com
+#    password: nethmidaniel@2004
+#    properties:
+#      mail:
+#        smtp:
+#          auth: true
+#          starttls:
+#            enable: true
+#
+#
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/vehicle_service_system
+#    username: root
+#    password: 1234D
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+
+
